--- a/cvraport/makefile
+++ b/cvraport/makefile
@@ -1,2 +1,2 @@
 all:
-	gcc main.c -Wall -std=c99 -l ncurses -l menu -o main main.c  include/open_ncurses.c   include/create_menu_date.c  include/create_menu_exif.c  include/create_menu_graphic.c  include/create_menu_one.c   include/create_menu_window.c  include/style_colors/style_menu.c include/style_colors/style_window_colors.c
+	gcc  main.c -I include/ -I include/style/ include/add_help/ -o main -Wall -std=c99 -Wincompatible-pointer-types -l ncurses -l menu
